# Qt-aplication

./: CMakeLists.txt  ColorCircle.cpp  ColorCircle.h  main.cpp
